Fix category layout (spacing, hr)

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -23,28 +23,39 @@ main#blog .size-blog-thumbnails {
   color: var(--regular-gray);
 }
 
+article.category-item {
+  gap: 8px;
+}
+
+main#blog section {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 main#blog .category-item h3 {
   font-family: "Charter-Regular";
   font-weight: normal;
-  margin: var(--spacing-lg) 0 0 0;
+  /* margin: var(--spacing-lg) 0 0 0; */
 }
 
 main#blog .category-item h3:nth-child(2n) {
   font-family: "Charter-Bold";
-  margin: var(--spacing-sm) 0 0 0;
+  /* margin: var(--spacing-sm) 0 0 0; */
 }
 
-main#blog .category-item > hr {
+main#blog section hr {
   display: block;
-  width: var(--spacing-xxxl);
+  width: 4rem;
   background-color: var(--mars);
   height: 1px;
   border: none;
-  margin: var(--spacing-lg) 0 0 0;
+  margin: 0;
+  /* margin: var(--spacing-lg) 0 0 0; */
 }
 
-main#blog .category-item:last-of-type > hr {
+main#blog section hr:last-of-type {
   display: block;
   background-color: transparent;
-  margin: 0 0 var(--spacing-xxl) 0;
+  /* margin: 0 0 var(--spacing-xxl) 0; */
 }
