--- a/styles/grid.css
+++ b/styles/grid.css
@@ -165,16 +165,6 @@ a.category-link:hover {
   gap: var(--spacing-sm);
 }
 
-hr {
-  background-color: var(--regular-gray);
-  border-radius: 2px;
-  height: 1px;
-  border: none;
-  margin: var(--spacing-xxxl) auto;
-  width: 75%;
-  display: flex;
-}
-
 .wp-block-video {
   margin: var(--spacing-lg) 0;
 }
